<resources>
    <string name="app_name">Glucofit App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="usernsme">Username</string>
    <string name="registerText">Already have an account?</string>
    <string name="registerButton">Sign In</string>
    <string name="LoginText">Don\'t have an account?</string>
    <string name="LoginButton">Sing Up</string>
    <string name="tatlelogin">Welcome Back 👋</string>
    <string name="tatleregister">Hallo 👋</string>
    <string name="description">Empower Your Health Journey with GlucoFit</string>
    <string name="error_empty">Required!</string>
    <string name="cameraButton">Camera</string>
    <string name="galleryButton">Gallery</string>
    <string name="analyzeButton">Analyze</string>

    <!--onbirding-->
    <string name="title_menu_1">Get sugar limit warning notifications </string>
    <string name="title_menu_2">Maintain your glucose and stay healthy!</string>
    <string name="title_menu_3">Scan your food and know it’s glucose</string>
    <string name="desc_menu_1">tolol 1111 bh convallis varius iaculis Lorem ipsum dolor sit amet, conse ctetur adipi scing elit. Nibh convallis varius iaculis.</string>
    <string name="desc_menu_2">tolol 222 Lorem ipsum dolor sit amet, conse ctetur adipi scing elit. Nibh convallis varius iaculis Lorem ipsum dolor sit amet, conse ctetur adipi scing elit. Nibh convallis varius iaculis.</string>
    <string name="desc_menu_3">tolol 123424 Lorem ipsum dolor sit amet, conse ctetur adipi scing elit. Nibh convallis varius iaculis Lorem ipsum dolor sit amet, conse ctetur adipi scing elit. Nibh convallis varius iaculis.</string>
    <string name="learn_now">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello from home fragment</string>
    <string name="hello_favorite_fragment">Hello from favorite fragment</string>
    <string name="hello_history_fragment">Hello from history fragment</string>
    <string name="hello_profile_fragment">Hello from profile fragment</string>

    <string name="title_asses">Quick Self Assessment</string>
    <string name="desc_asses">Please provide accurate information to help us understand your health status and give you related content.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Step 1</string>
    <string name="tab_text_2">Step 2</string>
    <string name="tab_text_3">Step 3</string>

    <!-- Health Condition-->
    <string name="title_health_condition">Health Condition</string>
    <string name="subtitle_health_condition">Do you have any health conditions that need attention?</string>
    <string name="instruction_health_condition">Please select one or more</string>
    <string name="option_diabetes">Diabetes</string>
    <string name="option_hypertension">Hipertensi</string>
    <string name="option_obesity">Obesitas</string>
    <string name="option_metabolic_syndrome">Sindrom metabolik</string>
    <string name="option_digestion_issues">Gangguan pencernaan terkait gula (misalnya, intoleransi laktosa)</string>
    <string name="option_high_cholesterol">Kolesterol tinggi</string>
    <string name="option_heart_disease">Resiko Penyakit jantung</string>
    <string name="option_special_diet">Kebutuhan diet khusus (misalnya, diet rendah karbohidrat)</string>
    <string name="option_none">Tidak memiliki</string>

    <!--life style-->
    <string name="question_sweet_consumption">How often do you consume sweet foods or drinks in a week?</string>
    <string name="instruction_condition">Please select one </string>
    <string name="info_icon">info</string>
    <string name="sweet_consumption_everyday">Setiap hari</string>
    <string name="sweet_consumption_5_6_times">5-6 kali seminggu</string>
    <string name="sweet_consumption_3_4_times">3-4 kali seminggu</string>
    <string name="sweet_consumption_1_2_times">1-2 kali seminggu</string>
    <string name="sweet_consumption_rarely">Jarang sekali</string>

    <string name="question_sugar_intake">How much sugar (in grams) do you usually consume in a day?</string>
    <string name="sugar_intake_less_1_teaspoon">&lt; dari 1 sendok teh (sekitar 4 g gula)</string>
    <string name="sugar_intake_1_2_teaspoons">1-2 sendok teh (sekitar 4-8 g gula)</string>
    <string name="sugar_intake_2_3_teaspoons">2-3 sendok teh (sekitar 8-12 g gula)</string>
    <string name="sugar_intake_more_3_teaspoons">&gt; dari 3 sendok teh (lebih dari 12 g gula)</string>

    <string name="question_exercise_frequency">How often do you exercise in a week?</string>
    <string name="exercise_frequency_everyday">Setiap hari</string>
    <string name="exercise_frequency_5_6_times">5-6 kali seminggu</string>
    <string name="exercise_frequency_3_4_times">3-4 kali seminggu</string>
    <string name="exercise_frequency_1_2_times">1-2 kali seminggu</string>
    <string name="exercise_frequency_rarely">Jarang sekali</string>

    <string name="question_food_preferences">Do you have any particular food preferences?</string>
    <string name="preference_vegetarian">Vegetarian</string>
    <string name="preference_vegan">Vegan</string>
    <string name="preference_paleo">Paleo</string>
    <string name="preference_gluten_free">High-Fiber</string>
    <string name="preference_High_Protein">High-Protein</string>
    <string name="preference_Low_Carb">Low-Carb</string>
    <string name="preference_Low_Fat">Low-Fat</string>
    <string name="preference_Low_Sodium">Low-Sodium</string>
    <string name="preference_Low_Sugar">Low-Sugar</string>
    <string name="preference_Alcohol_Free">Alcohol-Free</string>
    <string name="preference_Balanced">Balanced</string>


    <string name="question_food_allergies">Do you have allergies or intolerances to certain foods?</string>
    <string name="allergies_yes">Yes</string>
    <string name="allergies_no">No</string>
    <string name="allergies_other">Other</string>
    <string name="hint_type_here">Type here</string>

    <string name="question_food_likes">Do you have a food or ingredient that you really like?</string>
    <string name="question_food_dislikes">Do you have a food or ingredient you don\'t like?</string>

    <!--  informasi toolip-->
    <string name="toolip_vetarian">Excludes meat, fish, and poultry but includes plant-based foods, dairy products, and eggs.</string>
    <string name="toolip_vegan">Excludes all animal products, including meat, dairy, eggs, and honey, focusing on plant-based foods.</string>
    <string name="toolip_paleo">Focuses on foods presumed to be available to Paleolithic humans, including lean meats, fish, fruits, vegetables, nuts, and seeds, while excluding processed foods, grains, legumes, and dairy.</string>
    <string name="tooltip_high_fiber">Emphasizes foods rich in dietary fiber, such as fruits, vegetables, whole grains, and legumes, to promote digestive health.</string>
    <string name="tooltip_high_protein">Prioritizes foods high in protein, such as lean meats, fish, eggs, dairy products, legumes, nuts, and seeds, to support muscle growth and repair.</string>
    <string name="tooltip_low_carb">Limits carbohydrate intake, focusing on protein and fat-rich foods, and often includes vegetables, meat, fish, eggs, and dairy, while excluding or reducing grains, starchy vegetables, and sugary foods.</string>
    <string name="tooltip_low_fat">Restricts fat intake, emphasizing lean proteins, fruits, vegetables, and whole grains, while reducing consumption of fatty foods, oils, and dairy products.</string>
    <string name="tooltip_low_sodium">Aims to reduce sodium intake to manage blood pressure and heart health, focusing on fresh, unprocessed foods and minimizing salt usage.</string>
    <string name="tooltip_low_sugar">Limits the intake of added sugars and high-sugar foods, focusing on whole, unprocessed foods like vegetables, fruits, lean proteins, and whole grains.</string>
    <string name="tooltip_alcohol_free">Avoids all forms of alcohol, focusing on non-alcoholic beverages and foods.</string>
    <string name="tooltip_balanced">Incorporates a variety of food groups in moderate amounts, aiming for a balanced intake of carbohydrates, proteins, and fats to support overall health</string>
    <string name="searchbar_hint">Search</string>
    <string name="profil_title">Profil</string>

    <!--alert-->
    <string name="logout">Logout</string>
    <string name="sure">Are You Sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>


    <!--Action bar-->
    <string name="back_button">Back</string>
    <string name="selected_date">Selected date: %1$s</string>
    <string name="selected_dd">Selected DD: %1$s</string>
    <string name="selected_day">Selected day: %1$s</string>
    <string name="scanner_title">Scanner</string>
    <string name="image_get_uri_error">There was a problem getting the URI from the image.</string>
    <string name="image_capture_error">There was an error capturing the image. Please try again!</string>
    <string name="image_crop_error">There was an error cropping the image. Please try again!</string>
    <string name="image_classifier_failed">Image classification failed. Please try again!</string>
    <string name="String_judul">nama makanan</string>
    <string name="String_deskripsi">deskripsi</string>
    <string name="result">Analysis Results</string>
    <string name="tips">Tips</string>
    <string name="_1">1.</string>
    <string name="tip1">Capture the full dish in brightly lit conditions.</string>
    <string name="_2">2.</string>
    <string name="tip2">Use a plain background and avoid shadows or glare.</string>
    <string name="_3">3.</string>
    <string name="tip3">Keep the camera steady and include all parts of the dish.</string>
    <string name="_4">4.</string>
    <string name="tip4">For soupy foods, ensure contents are visible.</string>
    <string name="_5">5.</string>
    <string name="tip5">If results are incorrect, retake from another angle.</string>
    <string name="_6">6.</string>
    <string name="tip6">Thank you for using the GlucoFit app!</string>
    <string name="food_detail_title">Detail</string>
    <string name="invalid_image_file">Invalid image file</string>
    <string name="scanner_result_title">Scanner Result</string>
    <string name="onboarding_1">Track Your Sugar Intake and Get Recommendations</string>
    <string name="onboarding_3">Use our powerful image recognition to scan food items instantly know their sugar content or search by name for detailed nutritional information.</string>
    <string name="onboarding_desc_2">Get comprehensive information on sugar content, calories, servings, diet labels, ingredients, and recipe instructions for various foods. Save your favorite foods for quick access and easy tracking. Review your scan history to monitor your food choices over time.</string>
    <string name="onboarding_desc_1">Keep a close eye on your daily sugar consumption to maintain a healthy lifestyle. Receive personalized food recommendations based on your dietary preferences and health goals.</string>
    <string name="onboarding_2">Explore Detailed Food Insights and Manage Your Favorites</string>
    <string name="onboarding_tittle_3">Scan and Search Your Food Preferences</string>
</resources>
