<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activity.scanner.ScannerActivity">

    <include
        android:id="@+id/actionBar"
        layout="@layout/action_bar" />

    <!-- Food Image -->
    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/actionBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_food" />

    <!-- Camera and Gallery Buttons -->
    <LinearLayout
        android:id="@+id/cameraGalleryButtons"
        android:layout_below="@id/previewImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/black"
            android:drawablePadding="8dp"
            android:text="@string/cameraButton"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:drawablePadding="8dp"
            android:text="@string/galleryButton"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- Analyze Button -->
    <Button
        android:id="@+id/analyzeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cameraGalleryButtons"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@id/cameraGalleryButtons"
        android:layout_alignEnd="@id/cameraGalleryButtons"
        android:backgroundTint="@color/black"
        android:text="@string/analyzeButton"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white" />
</RelativeLayout>
